[gd_scene load_steps=14 format=3 uid="uid://be824ve2c7lm3"]

[ext_resource type="Script" uid="uid://b6h0y67wm6mxg" path="res://scenes/ui/modifiers/modifiers.gd" id="1_dt3tg"]
[ext_resource type="Script" uid="uid://dmwdwcc0iqnxf" path="res://themes/colorRectThemeColor.gd" id="2_1qclt"]
[ext_resource type="Texture2D" uid="uid://dyse3nbxu1fjr" path="res://scenes/ui/modifiers/images/placeholder.png" id="2_y06cl"]
[ext_resource type="Texture2D" uid="uid://bh5nkeis3bmvj" path="res://scenes/ui/modifiers/images/nope.png" id="3_1qclt"]
[ext_resource type="Texture2D" uid="uid://dwoncen3jiuv0" path="res://scenes/ui/modifiers/images/canDoWallSlide.png" id="4_8ra60"]
[ext_resource type="Texture2D" uid="uid://dquotko52oiag" path="res://scenes/ui/modifiers/images/canDoWallHang.png" id="5_31ouh"]
[ext_resource type="Texture2D" uid="uid://bd60qbqc1fq7s" path="res://scenes/ui/modifiers/images/canDoWallJump.png" id="6_0oxwt"]
[ext_resource type="Texture2D" uid="uid://u5oq6wq5r0wf" path="res://scenes/ui/modifiers/images/autoRun.png" id="7_ob0qt"]
[ext_resource type="Texture2D" uid="uid://gwjisq38njy3" path="res://scenes/ui/modifiers/images/2 jumps.png" id="8_coan7"]
[ext_resource type="Texture2D" uid="uid://comclkgfivfrl" path="res://scenes/ui/modifiers/images/1 jump.png" id="8_y06cl"]
[ext_resource type="Texture2D" uid="uid://c8mgwucaxddj8" path="res://scenes/ui/modifiers/images/3 jumps.png" id="9_16mno"]
[ext_resource type="Texture2D" uid="uid://nsc828vkp3sq" path="res://scenes/ui/modifiers/images/4+ jumps.png" id="10_fmbj4"]
[ext_resource type="Texture2D" uid="uid://db55mv41mlepw" path="res://scenes/ui/modifiers/images/changeSpeedOnSlopes.png" id="11_a68qm"]

[node name="modifiers" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_dt3tg")

[node name="modifiers editor bg" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 158.0
offset_bottom = 158.0
mouse_filter = 2
color = Color(0, 0.049301185, 0.12897289, 1)
script = ExtResource("2_1qclt")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 158.0
offset_bottom = 158.0
columns = 3

[node name="_base" type="Control" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/_base"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("2_y06cl")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/_base"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="canDoWallSlide" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/canDoWallSlide"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player can slide down walls"
texture = ExtResource("4_8ra60")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/canDoWallSlide"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "the player can not slide down walls"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="canDoWallHang" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/canDoWallHang"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player will grab onto ledges when jumping up a wall"
texture = ExtResource("5_31ouh")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/canDoWallHang"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "the player will not grab onto ledges"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="canDoWallJump" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/canDoWallJump"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player can walljump"
texture = ExtResource("6_0oxwt")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/canDoWallJump"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "walljumping is disabled"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="autoRun" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/autoRun"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player will keep running"
texture = ExtResource("7_ob0qt")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/autoRun"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "the player can move left and right normally"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="jumpCount" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="1" type="TextureRect" parent="GridContainer/jumpCount"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player has 1 jump"
texture = ExtResource("8_y06cl")
expand_mode = 1

[node name="2" type="TextureRect" parent="GridContainer/jumpCount"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player has a double jump"
texture = ExtResource("8_coan7")
expand_mode = 1

[node name="3" type="TextureRect" parent="GridContainer/jumpCount"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player has a tripple jump"
texture = ExtResource("9_16mno")
expand_mode = 1

[node name="4+" type="TextureRect" parent="GridContainer/jumpCount"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "the player has a 4 or more jumps"
texture = ExtResource("10_fmbj4")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/jumpCount"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "the player is not able to jump"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="changeSpeedOnSlopes" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/changeSpeedOnSlopes"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "when moving up a slope the player will be slower and when moving down a slope the player will be faster"
texture = ExtResource("11_a68qm")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/changeSpeedOnSlopes"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "the player speed will be the same going up or down slopes"
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="saveTick" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/saveTick"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "when the game is saved the tick will be saved with it meaning that when you respawn blocks will reset back to where they were when you reached the checkpoint instead of the default position"
texture = ExtResource("2_y06cl")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/saveTick"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
texture = ExtResource("3_1qclt")
expand_mode = 1

[node name="checkpointsSaveAll" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1

[node name="main" type="TextureRect" parent="GridContainer/checkpointsSaveAll"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "when the player collects a checkpoint all data will be saved"
texture = ExtResource("2_y06cl")
expand_mode = 1

[node name="nope" type="TextureRect" parent="GridContainer/checkpointsSaveAll"]
layout_mode = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 75.0
rotation = -0.7853982
tooltip_text = "when the player collects a checkpoint only the players position, stars, and all checkpoint states will be saved"
texture = ExtResource("3_1qclt")
expand_mode = 1

[connection signal="gui_input" from="GridContainer/canDoWallSlide" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/canDoWallHang" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/canDoWallJump" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/autoRun" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/jumpCount" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/changeSpeedOnSlopes" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/saveTick" to="." method="_on_gui_input" flags=18]
[connection signal="gui_input" from="GridContainer/checkpointsSaveAll" to="." method="_on_gui_input" flags=18 binds= [Object(Control,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":2,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(50, 50),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"localize_numeral_system":true,"tooltip_text":"","tooltip_auto_translate_mode":0,"focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"focus_behavior_recursive":0,"mouse_filter":1,"mouse_behavior_recursive":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"accessibility_name":"","accessibility_description":"","accessibility_live":0,"accessibility_controls_nodes":Array[NodePath]([]),"accessibility_described_by_nodes":Array[NodePath]([]),"accessibility_labeled_by_nodes":Array[NodePath]([]),"accessibility_flow_to_nodes":Array[NodePath]([]),"theme":null,"theme_type_variation":&"","script":null)
]]
